2012-04-11  James Robinson  <jamesr@chromium.org>

        [chromium] Remove unused compositeToTexture / compositeOffscreen setting
        https://bugs.webkit.org/show_bug.cgi?id=83733

        Reviewed by Adrienne Walker.

        Remove compositeOffscreen / compositeToTexture setting. This was an experiment that is no longer needed.

        * public/WebSettings.h:
        * src/WebLayerTreeView.cpp:
        (WebKit::WebLayerTreeView::Settings::operator CCSettings):
        * src/WebSettingsImpl.cpp:
        (WebKit::WebSettingsImpl::WebSettingsImpl):
        * src/WebSettingsImpl.h:
        (WebSettingsImpl):
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::setIsAcceleratedCompositingActive):

2012-04-13  James Robinson  <jamesr@chromium.org>

        [chromium] Move WebVideoFrame into Platform and remove WebCore::VideoFrameChromium wrapper API
        https://bugs.webkit.org/show_bug.cgi?id=83851

        Reviewed by Adam Barth.

        Moves the WebVideoFrame interface into Platform and removes the now unnecessary VideoFrameChromiumImpl adapter
        implementation.

        * WebKit.gyp:
        * public/WebVideoFrame.h:
        * src/AssertMatchingEnums.cpp:
        * src/VideoFrameChromiumImpl.cpp: Removed.
        * src/VideoFrameChromiumImpl.h: Removed.
        * src/WebMediaPlayerClientImpl.cpp:
        (WebKit::WebMediaPlayerClientImpl::getCurrentFrame):
        (WebKit::WebMediaPlayerClientImpl::putCurrentFrame):
        (WebKit::WebMediaPlayerClientImpl::supportsType):
        * src/WebMediaPlayerClientImpl.h:
        (WebMediaPlayerClientImpl):

2012-04-13  Rob Flack  <flackr@chromium.org>

        Chromium: Should enable -webkit-image-set
        https://bugs.webkit.org/show_bug.cgi?id=81859

        Reviewed by Adam Barth.

        * features.gypi:

2012-04-12  Michael Nordman  <michaeln@google.com>

        [chromium] Now that the chromium port is using a different dom_storage backend